# spacemesh-rs

./: Cargo.toml  README.md
.github/workflows/: general.yml
types/: Cargo.toml
types/src/: account.rs  address.rs  ballot.rs  beacon.rs  block.rs  bytes.rs  hashes.rs  layer.rs  lib.rs  proposal.rs
types/src/activation/: atx.rs  mod.rs  poet.rs  post.rs
types/src/db/: mod.rs
types/src/transaction/: mod.rs  tx.rs  tx_header.rs  tx_result.rs
types/tests/: address.rs  ballot.rs  blocks.rs  common.rs  hash.rs  layer.rs  proposal.rs
types/tests/test_data/: addresses.rs
