[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {version = "1.2.1", default-features = true, features = ["serde"] }
parity-scale-codec = {version = "3.1.5", features = ["full"] }
scale-info = { version = "2.1.2", features = ["serde", "derive"] }
thiserror = "1.0.32"
hex = "0.4.3"
primitive-types = { version = "0.12.0"}
chrono = "0.4.22"
sha2 = "0.10.6"
sha3 = "0.10.5"
